# OxyRent

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  课程设计任务书.docx
.claude/: settings.json
.superpowers/brainstorm/301440-1782399948/content/: api-design.html  approaches.html  architecture.html  database.html  development-plan.html  docker.html  frontend.html
Client/: Dockerfile  config.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
Client/src/: App.vue  main.js
Client/src/api/: finance.js  maintenance.js  rental.js  request.js  user.js  vehicle.js
Client/src/config/: index.js
Client/src/layout/: AuthLayout.vue  MainLayout.vue
Client/src/router/: index.js
Client/src/stores/: app.js  auth.js
Client/src/styles/: global.css  variables.css
Client/src/utils/: auth.js
FinanceServer/: CMakeLists.txt  Defer.h  Dockerfile  FinanceGrpcServiceImpl.cpp  FinanceGrpcServiceImpl.h  Global.h  MySQLConnectPool.cpp  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RedisConnectPool.cpp  RedisConnectPool.h  config.ini  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
GateServer/: AsyncTaskPool.cpp  CMakeLists.txt  ConnectionGuard.h  Defer.h  Dockerfile  FinanceGrpcClient.cpp  FinanceGrpcClient.h  Global.h  HttpConnection.cpp  HttpConnection.h  IOContextPool.cpp  Logger.cpp  LogicSystem.cpp  LogicSystem.h  MailerGrpcClient.cpp  MailerGrpcClient.h  MainServer.cpp  MainServer.h  MySQLConnectPool.cpp  MySQLConnectPool.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisConnectPool.h  RedisManager.cpp  Singleton.h  UserGrpcClient.cpp  UserGrpcClient.h  VehicleGrpcClient.cpp  VehicleGrpcClient.h  config.ini  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
MailerServer/: Dockerfile  config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
OxyTeamTasks/: .gitignore  README-en.md  README.md
OxyTeamTasks/.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
OxyTeamTasks/Client/: config.json  index.html  package-lock.json  package.json  vite.config.js
OxyTeamTasks/Client/src/: App.vue  main.js
OxyTeamTasks/GateServer/: AsyncTaskPool.cpp  CMakeLists.txt  Global.h  HttpConnection.cpp  HttpConnection.h  IOContextPool.h  LogicSystem.cpp  LogicSystem.h  MainServer.cpp  MainServer.h  MySQLConnectPool.cpp  MySQLConnectPool.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  StatusGrpcClient.cpp  StatusGrpcClient.h  TaskGrpcClient.cpp  TaskGrpcClient.h  UserGrpcClient.cpp  UserGrpcClient.h  config.ini  main.cpp
OxyTeamTasks/MailerServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
OxyTeamTasks/PushServer/: CMakeLists.txt  Global.h  IOContextPool.h  KafkaProducer.cpp  Logger.cpp  MySQLConnectPool.cpp  MySQLDao.h  MySQLManager.h  PushGrpcServiceImpl.cpp  RPCConnectPool.cpp  RedisConnectPool.h  StatusGrpcClient.h  config.ini  message.proto
OxyTeamTasks/PushServer2/: CMakeLists.txt  ConfigManager.h  IOContextPool.cpp  LogicSystem.cpp  LogicSystem.h  MainServer.cpp  MainServer.h  MySQLDao.cpp  MySQLManager.cpp  PushGrpcServiceImpl.h  PushServerMain.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  Session.cpp  Session.h  Singleton.h  StatusGrpcClient.cpp  config.ini
OxyTeamTasks/StatusServer/: CMakeLists.txt  ConfigManager.h  Global.h  KafkaConsumer.cpp  KafkaConsumer.h  Logger.cpp  Logger.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  SegmentTree.cpp  SegmentTree.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini
OxyTeamTasks/TaskServer/: CMakeLists.txt  ConfigManager.cpp  Global.h  Logger.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  PushGrpcClient.cpp  PushGrpcClient.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  TaskGrpcServiceImpl.cpp  TaskGrpcServiceImpl.h  TaskServer.cpp  config.ini
OxyTeamTasks/UMSServer/: CMakeLists.txt  ConfigManager.cpp  Global.h  KafkaProducer.h  MailerGrpcClient.cpp  MailerGrpcClient.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisManager.cpp  RedisManager.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UMSGrpcServiceImpl.cpp  UMSGrpcServiceImpl.h  config.ini  main.cpp
OxyTeamTasks/script/: build_all.sh  clear_logs.sh  start_all.sh  stop_all.sh
OxyTeamTasks/sql/: checkins.sql  messages.sql  task.sql  task_assignments.sql  todo_list.sql  user.sql
READMEs/: README-en.md  README-ja.md  README-ru.md
UMSServer/: AsyncTaskPool.h  CMakeLists.txt  ConfigManager.h  Dockerfile  Global.h  Logger.cpp  Logger.h  MySQLConnectPool.cpp  MySQLConnectPool.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RedisConnectPool.cpp  RedisManager.h  Singleton.h  UMSGrpcServiceImpl.cpp  UMSGrpcServiceImpl.h  config.ini  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
VehicleServer/: CMakeLists.txt  ConfigManager.cpp  ConnectionGuard.h  Dockerfile  Global.h  IOContextPool.h  Logger.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RedisManager.cpp  VehicleGrpcServiceImpl.cpp  VehicleGrpcServiceImpl.h  config.ini  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
docker/: finance-config.ini  gate-config.ini  mailer-config.json  ums-config.ini  vehicle-config.ini
docs/superpowers/plans/: 2026-06-25-vehicle-rental-system.md
docs/superpowers/specs/: 2026-06-25-vehicle-rental-system-design.md
script/: build_all.sh  start_all.sh  stop_all.sh
sql/: vehicle_rental.sql
(+49 files in other folders)
